# v2a

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  convert_to_mp3.py  extract_audio.py  lib.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-tests.yml  release.yml  update-homebrew.yml
scripts/: bump_version.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py
v2a/: __init__.py  cli.py  core.py
